# GovernorPrivate

./: .gitignore  Dockerfile.foundry  Dockerfile.foundry_script  Dockerfile.frontend  Dockerfile.trusted  MultiContainer.yaml  MultiContainer2.yaml  MultiContainer23.yaml  MultiContainer25.yaml  MultiContainer26.yaml  MultiContainer3.yaml  README.md  backend_build.yaml  deploy.sh  docker-compose.yml  foundry_build.yaml  frontend_build.yaml  service.yaml  trusted_build.yaml
backend/: Dockerfile.backend
backend/rust_web_server/: Cargo.toml  ct_vec_old
backend/rust_web_server/src/: delegate.rs  delegate_registration.rs  delegate_unregistration.rs  election_setup.rs  election_start.rs  main.rs  one_user.rs  private_vote.rs  undelegate.rs
backend/rust_web_server/src/abi/: GovernorBravoDelegate.json
backend/rust_web_server/src/utils/: bjj_ah_elgamal.rs  constants.rs  hash.rs  main.rs  merklehelper.rs  util.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  abi-decoder.js  index.js
frontend/src/components/: NavBar.css  (+3 more)
gov_foundry/: .env  foundry.toml  plonk_vk.sol  remappings.txt
gov_foundry/script/: Setup.s.sol
gov_foundry/src/: GovernorBravoDelegate.sol  GovernorBravoInterfaces.sol  PrivateToken.sol
privatevotingzkproofs-main/: runner.sh
privatevotingzkproofs-main/R_add/: Nargo.toml  Prover.toml  Verifier.toml
privatevotingzkproofs-main/R_decpercent/: Nargo.toml  Prover.toml  Verifier.toml
privatevotingzkproofs-main/R_del/: Nargo.toml  Prover.toml  Verifier.toml  test.t.sol
privatevotingzkproofs-main/R_del10/: Nargo.toml  Prover.toml  Verifier.toml
privatevotingzkproofs-main/R_del5/: Nargo.toml  Prover.toml  Verifier.toml
trusted_auth/: package-lock.json  package.json
trusted_auth/rust_web_server/: Cargo.toml  sk.txt
trusted_auth/rust_web_server/src/: main.rs  setup.rs  tally.rs
trusted_auth/rust_web_server/src/abi/: PrivateToken.json  Timelock.json
trusted_auth/rust_web_server/src/utils/: bjj_ah_elgamal.rs  constants.rs  main.rs  util.rs
(+64 files in other folders)
