[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "5.0"
ethers = { version = "2.0", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
blst= "0.3.10"
rand= "0.8"
sha2 = "0.10.7"
libsecp256k1 = "0.7.1"
aes-gcm = "0.10.2"
babyjubjub-rs = "0.0.10"
lazy_static = "1.4.0"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num-bigint = "0.4.4"
acvm = "0.25.0"
arkworks-mimc = {version="0.3.0", features=["mimc-7-91-bn254"]}
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-crypto-primitives = "0.4.0"
poseidon-rs = "0.0.8"
k256 = "0.13.3"
rand_core = "0.6.4"
hex = "0.4.3"
itertools = "0.12.1"
num-traits = "0.2.17"
tokio = "1.35.1"
toml = "0.8.10"


[dependencies.rocket]
version = "0.5.0"
features = ["json"]
